New SDK design resources (#226)

--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar_with_agent_info.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar_with_agent_info.xml
@@ -29,7 +29,8 @@
             android:autoLink="none"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/ninchat_color_modal_text"
+            android:textIsSelectable="true"
+            android:textColor="@color/ninchat_color_titlebar_agent_info"
             android:textStyle="normal|bold"
             tools:text="Pallab Gain ( new user name )" />
 
@@ -41,7 +42,8 @@
             android:autoLink="none"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/ninchat_color_modal_text"
+            android:textIsSelectable="true"
+            android:textColor="@color/ninchat_color_titlebar_agent_info"
             tools:text="Agent job title placeholder" />
     </LinearLayout>
 
