--- a/ninchatsdk/src/main/res/layout/text_view.xml
+++ b/ninchatsdk/src/main/res/layout/text_view.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
@@ -10,7 +11,8 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        android:text="First, tell a bit about your situation so we can help you better."
+        style="@style/NinchatTheme.Questionnaire.TextView"
+        tools:text="First, tell a bit about your situation so we can help you better."
         android:textColor="@color/ninchat_color_text_normal" />
 
 </LinearLayout>
