--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -28,19 +28,34 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <style name="NinchatTheme.Button.Queue.Item" parent="NinchatTheme.Button">
+        <item name="android:height">@null</item>
+        <item name="android:lines">@null</item>
+        <item name="android:layout_marginTop">@null</item>
+        <item name="android:layout_marginBottom">@null</item>
+    </style>
+
     <style name="NinchatTheme.Button.Dialog" parent="NinchatTheme.Button">
-        <item name="android:height">@dimen/ninchat_dialog_button_height</item>
-        <item name="android:layout_height">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">40dp</item>
+        <item name="android:height">@null</item>
+        <item name="android:minHeight">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Close" parent="NinchatTheme.Button">
+        <item name="android:height">@null</item>
         <item name="android:background">@drawable/ninchat_chat_secondary_button</item>
         <item name="android:textColor">@color/ninchat_color_button_secondary_text</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Dialog.Close" parent="NinchatTheme.Button.Close">
-        <item name="android:height">@dimen/ninchat_dialog_button_height</item>
-        <item name="android:layout_height">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">40dp</item>
+        <item name="android:height">@null</item>
+        <item name="android:minHeight">@dimen/ninchat_dialog_button_height</item>
+        <item name="android:lines">@null</item>
     </style>
 
     <style name="NinchatTheme.Button.Close.Chat" parent="NinchatTheme.Button.Close">
@@ -92,7 +107,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:elevation">0dp</item>
         <item name="android:background">@drawable/ninchat_ui_compose_select_button</item>
-        <item name="android:textColor">@color/ninchat_color_ui_compose_select_unselected_text</item>
+        <item name="android:textColor">@color/ninchat_color_ui_compose_select_text</item>
         <item name="android:gravity">center</item>
         <item name="android:textAlignment">center</item>
     </style>
@@ -106,7 +121,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowIsFloating">false</item>
-        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimEnabled">true</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowMinWidthMajor">100%</item>
@@ -116,17 +131,78 @@
         <!--<item name="android:windowNoTitle">true</item>-->
     </style>
 
-    <style name="NinchatTheme.Radio.Selected" parent="NinchatTheme.MultiChoice" >
-        <item name="android:textColor">@color/ninchat_color_radio_item_selected_text</item>
+    <style name="NinchatTheme.Questionnaire.Radio" parent="NinchatTheme.MultiChoice">
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:minHeight">50dp</item>
     </style>
-    <style name="NinchatTheme.Radio.UnSelected" parent="NinchatTheme.MultiChoice" >
-        <item name="android:textColor">@color/ninchat_color_radio_item_unselected_text</item>
+
+    <style name="NinchatTheme.Questionnaire.Radio.Selected" parent="NinchatTheme.MultiChoice.Selected">
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:minHeight">50dp</item>
     </style>
+
     <style name="NinchatTheme.TitlebarPlaceholder">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/ninchat_titlebar_text_placeholder</item>
         <item name="android:gravity">left</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.BotView" parent="NinchatTheme">
+        <item name="android:src">@drawable/ninchat_chat_avatar_left</item>
+        <item name="android:layout_width">@dimen/ninchat_chat_activity_avatar_size</item>
+        <item name="android:layout_height">@dimen/ninchat_chat_activity_avatar_size</item>
+        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_marginEnd">@dimen/ninchat_chat_activity_avatar_margin</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:contentDescription">"Agent avatar</item>
+    </style>
+
+    <style name="NinchatTheme.Questionnaire.BotView.Text" parent="NinchatTheme.Questionnaire">
+        <item name="android:layout_marginEnd">10dp</item>
+        <item name="android:layout_toEndOf">@id/ninchat_chat_message_bot_avatar</item>
+        <item name="android:gravity">center|start</item>
+        <item name="android:minHeight">@dimen/ninchat_chat_activity_message_title_height</item>
+        <item name="android:textColor">@color/ninchat_color_questionnaire_bot_name_text</item>
+        <item name="android:textSize">@dimen/ninchat_questionnaire_bot_name_text_size</item>
+    </style>
+
+    <style name="NinchatTheme.Backlog.Info" parent="NinchatTheme">
+        <item name="android:layout_marginTop">
+            @dimen/ninchat_chat_activity_chat_started_bottom_margin
+        </item>
+        <item name="android:layout_marginBottom">
+            @dimen/ninchat_chat_activity_chat_started_bottom_margin
+        </item>
+        <item name="android:background">@drawable/ninchat_chat_info</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">45dp</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+    </style>
+
+    <style name="NinchatTheme.Backlog.Info.Text" parent="NinchatTheme">
+        <item name="android:drawableStart">@drawable/ninchat_icon_chat_info_icon</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/ninchat_color_info_text</item>
+    </style>
+
+    <style name="NinchatTheme.Backlog.CommandView" parent="NinchatTheme">
+        <item name="android:layout_marginTop">@dimen/ninchat_chat_activity_message_margin</item>
+        <item name="android:layout_marginLeft">@dimen/ninchat_chat_activity_message_margin</item>
+        <item name="android:layout_marginRight">@dimen/ninchat_chat_activity_message_margin</item>
+        <item name="android:background">@drawable/ninchat_chat_command_input_text</item>
+        <item name="android:inputType">textMultiLine|textCapSentences</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:maxLines">6</item>
+        <item name="android:textColor">@color/ninchat_color_textarea_text</item>
+        <item name="android:textColorHint">@color/ninchat_color_textarea_text_hint</item>
     </style>
 
 </resources>
