--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -49,6 +49,7 @@
     <dimen name="ninchat_chat_activity_action_icon_size">35dp</dimen>
     <dimen name="ninchat_chat_activity_send_text_padding">10dp</dimen>
     <dimen name="ninchat_chat_activity_video_view_height">256dp</dimen>
+    <dimen name="ninchat_chat_activity_video_view_jitsi_height">360dp</dimen>
     <dimen name="ninchat_chat_activity_video_view_height_small">188dp</dimen>
     <dimen name="ninchat_chat_activity_video_call_spinner_size">100dp</dimen>
     <dimen name="ninchat_chat_activity_video_control_padding">15dp</dimen>
