--- a/ninchatsdk/src/main/res/values/colors.xml
+++ b/ninchatsdk/src/main/res/values/colors.xml
@@ -89,6 +89,9 @@
 
     <color name="ninchat_color_questionnaire_bot_name_text">@color/ninchat_color_text_normal</color>
 
+    <color name="ninchat_color_questionnaire_hyperlink_text">@android:color/white</color>
+    <color name="ninchat_color_questionnaire_hyperlink_text_selected">@android:color/white</color>
+
     <color name="ninchat_color_chat_info_text">@color/ninchat_color_text_normal</color>
     <color name="ninchat_color_chat_info_border">@android:color/white</color>
 
