--- a/ninchatsdk/src/main/res/layout/href_item.xml
+++ b/ninchatsdk/src/main/res/layout/href_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        tools:visibility="visible"
         tools:text="A compound text box label " />
 
     <TextView
