backlog/infotext: add padding
  - Add default top and bottom padding so that the padding is uniform during multiline text as well

--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -190,6 +190,8 @@
         <item name="android:drawableStart">@drawable/ninchat_icon_chat_info_icon</item>
         <item name="android:drawablePadding">5dp</item>
         <item name="android:gravity">center</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
         <item name="android:textColor">@color/ninchat_color_info_text</item>
     </style>
 
