--- a/ninchatsdk/src/main/res/drawable/ninchat_chat_checkbox_selected.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_chat_checkbox_selected.xml
@@ -5,7 +5,7 @@
             <size
                 android:width="30dp"
                 android:height="30dp" />
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="@android:color/white" />
             <stroke
                 android:width="2dp"
                 android:color="#008aff" />
