bugfix/media-toggle: show media control button on webrtc connect
 - fix a corner case, where if you try to toggle video or audio before the webrtc internal initialize; it can lead to a crash. One of the possible fix is to allow user to toggle audio and video only after webrtc connection is actually up

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -151,11 +151,14 @@
             tools:visibility="visible" />
 
         <LinearLayout
+            android:id="@+id/video_call_media_controls"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:padding="@dimen/ninchat_chat_activity_video_control_padding">
 
             <ImageView
