--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -117,101 +117,15 @@
         tools:text="Close"
         tools:visibility="gone" />
 
-    <RelativeLayout
-        android:id="@+id/videoContainer"
+    <include
+        android:id="@+id/ninchat_p2p_video_view"
+        android:layout_below="@+id/ninchat_titlebar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/ninchat_chat_activity_video_view_height"
-        android:layout_below="@+id/ninchat_titlebar"
-        android:background="@color/ninchat_colorPrimaryDark"
+        layout="@layout/ninchat_p2p_video_container"
         android:visibility="gone"
-        tools:visibility="visible">
-
-        <org.webrtc.SurfaceViewRenderer
-            android:id="@+id/video"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true" />
-
-        <org.webrtc.SurfaceViewRenderer
-            android:id="@+id/pip_video"
-            android:layout_width="@dimen/ninchat_chat_activity_pip_video_width"
-            android:layout_height="@dimen/ninchat_chat_activity_pip_video_height"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true" />
-
-        <ImageView
-            android:id="@+id/video_call_spinner"
-            android:layout_width="@dimen/ninchat_chat_activity_video_call_spinner_size"
-            android:layout_height="@dimen/ninchat_chat_activity_video_call_spinner_size"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ninchat_icon_loader_large"
-            android:visibility="gone"
-            tools:visibility="visible" />
-
-        <LinearLayout
-            android:id="@+id/video_call_media_controls"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:padding="@dimen/ninchat_chat_activity_video_control_padding">
-
-            <ImageView
-                android:id="@+id/fullscreen_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleFullScreen"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_toggle_full" />
-
-            <ImageView
-                android:id="@+id/audio_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleAudio"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_sound_on" />
-
-            <ImageView
-                android:id="@+id/microphone_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleMicrophone"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_microphone_on" />
-
-            <ImageView
-                android:id="@+id/video_on_off"
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_video_control_icon_margin"
-                android:adjustViewBounds="true"
-                android:onClick="onToggleVideo"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_camera_on" />
-
-            <ImageView
-                android:layout_width="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_video_control_icon_size"
-                android:adjustViewBounds="true"
-                android:onClick="onVideoHangUp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_video_hangup" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
+        tools:visibility="visible"
+    />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/message_list"
@@ -219,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="true"
         android:layout_above="@id/send_message_container"
-        android:layout_below="@id/videoContainer"
+        android:layout_below="@id/ninchat_p2p_video_view"
         android:overScrollMode="never"
         tools:itemCount="2"
         tools:listitem="@layout/item_chat_message" />
