--- a/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_chat.xml
@@ -8,91 +8,6 @@
     android:keepScreenOn="true"
     tools:context=".ninchatchatactivity.view.NinchatChatActivity">
 
-    <LinearLayout
-        android:id="@+id/send_message_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/ninchat_chat_command_input_divider"
-        android:onClick="onEditTextClick"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/message"
-            style="@style/NinchatTheme.Backlog.CommandView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
-            tools:hint="Enter your message" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/ninchat_chat_activity_action_bar_height"
-            android:layout_gravity="end"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/video_call"
-                android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
-                android:adjustViewBounds="true"
-                android:onClick="onVideoCall"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_textarea_camera"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-            <ImageView
-                android:id="@+id/attachment"
-                android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
-                android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
-                android:adjustViewBounds="true"
-                android:onClick="onAttachmentClick"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ninchat_icon_textarea_attachment"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-            <RelativeLayout
-                android:id="@+id/send_button_icon"
-                android:layout_width="@dimen/ninchat_send_button_height"
-                android:layout_height="@dimen/ninchat_send_button_height"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
-                android:background="@drawable/ninchat_textarea_submit_button"
-                android:onClick="onSendClick"
-                android:visibility="gone"
-                tools:visibility="visible">
-
-                <ImageView
-                    android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
-                    android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ninchat_icon_textarea_submit_button" />
-
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/send_button"
-                style="@style/NinchatTheme.Button.Send"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
-                android:onClick="onSendClick"
-                tools:text="Send" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
     <include
         android:id="@+id/ninchat_titlebar"
         layout="@layout/ninchat_titlebar"
@@ -117,10 +32,12 @@
         tools:text="Close"
         tools:visibility="gone" />
 
+    <!--Both P2P and conference view in a group-->
     <RelativeLayout
         android:id="@+id/conference_or_p2p_view_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/ninchat_titlebar"
         android:visibility="visible"
         tools:visibility="visible">
@@ -143,26 +60,125 @@
 
         <FrameLayout
             android:id="@+id/jitsi_frame_layout"
-            android:layout_below="@+id/ninchat_conference_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/amp_dark_blue"
             android:layout_alignWithParentIfMissing="true"
             android:visibility="gone"
+            android:background="@color/gph_dark_red"
             tools:visibility="visible" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/message_list"
+
+    <!--Chat message list and editor view group-->
+    <RelativeLayout
+        android:id="@+id/chat_message_list_and_editor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
+        tools:visibility="visible"
         android:layout_alignWithParentIfMissing="true"
-        android:layout_above="@id/send_message_container"
-        android:layout_below="@id/conference_or_p2p_view_container"
-        android:overScrollMode="never"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_chat_message" />
+        android:layout_below="@id/ninchat_titlebar">
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/message_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_above="@id/send_message_container"
+            android:overScrollMode="never"
+            tools:itemCount="2"
+            tools:listitem="@layout/item_chat_message" />
+
+        <LinearLayout
+            android:id="@+id/send_message_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/ninchat_chat_command_input_divider"
+            android:onClick="onEditTextClick"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/message"
+                style="@style/NinchatTheme.Backlog.CommandView"
+                android:imeOptions="actionDone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:hint="Enter your message" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/ninchat_chat_activity_action_bar_height"
+                android:layout_gravity="end"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/video_call"
+                    android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                    android:adjustViewBounds="true"
+                    android:onClick="onVideoCall"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_textarea_camera"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <ImageView
+                    android:id="@+id/attachment"
+                    android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
+                    android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                    android:adjustViewBounds="true"
+                    android:onClick="onAttachmentClick"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ninchat_icon_textarea_attachment"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
+
+                <RelativeLayout
+                    android:id="@+id/send_button_icon"
+                    android:layout_width="@dimen/ninchat_send_button_height"
+                    android:layout_height="@dimen/ninchat_send_button_height"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                    android:background="@drawable/ninchat_textarea_submit_button"
+                    android:onClick="onSendClick"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <ImageView
+                        android:layout_width="@dimen/ninchat_chat_activity_action_icon_size"
+                        android:layout_height="@dimen/ninchat_chat_activity_action_icon_size"
+                        android:layout_centerInParent="true"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ninchat_icon_textarea_submit_button" />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/send_button"
+                    style="@style/NinchatTheme.Button.Send"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/ninchat_chat_activity_action_bar_padding"
+                    android:onClick="onSendClick"
+                    tools:text="Send" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+    <!--Error view to show any error message-->
     <include
         android:id="@+id/ninchat_chat_error"
         layout="@layout/dialog_error"
