--- a/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
+++ b/ninchatsdk/src/main/res/layout/ninchat_titlebar.xml
@@ -27,10 +27,11 @@
 
     <ImageView
         android:id="@+id/ninchat_titlebar_toggle_chat"
-        style="@style/NinchatTheme.Button.ToggleVideo.Titlebar"
+        style="@style/NinchatTheme.MultiChoice"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginRight="10dp"
+        android:background="@drawable/ninchat_chat_secondary_button"
         android:src="@drawable/ninchat_icon_toggle_chat_bubble"
         android:visibility="gone"
         tools:visibility="visible" />
